--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -20,6 +20,7 @@
     "@aws-cdk/aws-sns": "^0.9.0",
     "@aws-cdk/aws-sqs": "^0.9.0",
     "@aws-cdk/cdk": "^0.9.0",
-    "@types/node": "^10.9.4"
+    "@types/node": "^10.9.4",
+    "node-env-file": "^0.1.8"
   }
 }
