--- a/incident-graph/Cargo.toml
+++ b/incident-graph/Cargo.toml
@@ -30,6 +30,7 @@ serde_json = "1.0.20"
 serde_derive = "1.0.66"
 dgraph_client = "0.1.0"
 failure = "0.1.2"
+sha2 = "0.8.0"
 
 
 [dependencies.uuid]
@@ -40,4 +41,5 @@ features = ["v4"]
 
 [build-dependencies]
 tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
+
 
