Transactions for NodeIdentifier

--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -23,7 +23,7 @@ prost = "0.4.0"
 prost-derive = "0.4"
 prost-types = "*"
 tokio-core = "0.1"
-postgres = "0.15.2"
+#postgres = "0.15.2"
 base64 = "0.9.2"
 rusoto_core = "0.32.0"
 rusoto_s3 = "0.32.0"
