Start work on network nodes

--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -13,6 +13,8 @@ failure = "0.1.2"
 prost = "0.4.0"
 log = "0.4.3"
 base16 = "0.1.1"
+regex = "1.0.5"
+lazy_static = "1.1.0"
 
 
 [dependencies.uuid]
