--- a/graph-descriptions/Cargo.toml
+++ b/graph-descriptions/Cargo.toml
@@ -11,7 +11,7 @@ bytes = "0.4"
 prost = "0.4"
 prost-derive = "0.4"
 
-typed-builder= "0.1.0"
+typed-builder= "0.1.1"
 sha3="*"
 
 derive_more = "0.10.*"
@@ -22,6 +22,7 @@ custom_derive = "0.1.7"
 serde = "1.0.66"
 serde_json = "1.0.20"
 serde_derive = "1.0.66"
+derive_builder = "0.7.0"
 
 
 [dependencies.uuid]
@@ -31,4 +32,4 @@ features = ["v4"]
 
 
 [build-dependencies]
-tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
+prost-build = "0.4.0"
