--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -16,7 +16,6 @@ path = "src/bin/node-identifier-retry-handler.rs"
 [dependencies]
 bytes = "0.4"
 failure = "*"
-futures-await = "0.1.1"
 graph-descriptions = {path = "./graph-descriptions"}
 sqs-microservice = {path = "./sqs-microservice"}
 prost = "0.4.0"
@@ -33,6 +32,8 @@ log = "*"
 base58 = "0.1.0"
 stopwatch = "0.0.7"
 lru_time_cache = "0.8.0"
+zstd = "0.4.21+zstd.1.3.7"
+futures = "0.1.25"
 
 [dependencies.uuid]
 version = "*"
