--- a/sqs-microservice/Cargo.toml
+++ b/sqs-microservice/Cargo.toml
@@ -8,7 +8,6 @@ aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
 log = "0.4.3"
 serde = "1.0.70"
 serde_json = "1.0.24"
-futures-await = "0.1.1"
 prost = "0.4.0"
 rusoto_s3 = "0.32.0"
 rusoto_core = "0.32.0"
@@ -18,3 +17,5 @@ tokio-core = "0.1.17"
 base64 = "0.9.2"
 openssl-probe = "0.1.2"
 stopwatch = "0.0.7"
+futures = "0.1.25"
+zstd = "0.4.21+zstd.1.3.7"
