Update cdk to pass in queue_url as environment variable. Move to sqs_lambda crate for subggenerators and identifier.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ venv/
 grapl-cdk/index.js
 
 word-macro-analyzer/*/
-
+bootstrap
 engagement-creation-service/graph-descriptions/
 engagement-creation-service/incident-graph/
 engagement-creation-service/sqs-microservice/
