--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -12,18 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^0.17.0",
-    "@aws-cdk/aws-lambda": "^0.17.0",
-    "@aws-cdk/aws-rds": "^0.17.0",
-    "@aws-cdk/aws-s3": "^0.17.0",
-    "@aws-cdk/aws-s3-notifications": "^0.17.0",
-    "@aws-cdk/aws-sns": "^0.17.0",
-    "@aws-cdk/aws-sqs": "^0.17.0",
-    "@aws-cdk/cdk": "^0.17.0",
-    "@aws-cdk/aws-lambda-event-sources": "^0.17.0",
-    "aws-cdk": "^0.17.0",
-    "@types/node": "^10.12.9",
-    "node-env-file": "^0.1.8",
-    "@aws-cdk/aws-route53": "latest"
+    "@aws-cdk/aws-ec2": "^0.21.0",
+    "@aws-cdk/aws-lambda": "^0.21.0",
+    "@aws-cdk/aws-lambda-event-sources": "^0.21.0",
+    "@aws-cdk/aws-rds": "^0.21.0",
+    "@aws-cdk/aws-route53": "^0.21.0",
+    "@aws-cdk/aws-s3": "^0.21.0",
+    "@aws-cdk/aws-s3-notifications": "^0.21.0",
+    "@aws-cdk/aws-sns": "^0.21.0",
+    "@aws-cdk/aws-sqs": "^0.21.0",
+    "@aws-cdk/cdk": "^0.21.0",
+    "@types/node": "^10.12.18",
+    "aws-cdk": "^0.21.0",
+    "node-env-file": "^0.1.8"
   }
 }
