--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -17,15 +17,16 @@ path = "src/bin/node-identifier-retry-handler.rs"
 bytes = "0.4"
 failure = "*"
 graph-descriptions = {path = "./graph-descriptions"}
-sqs-microservice = {path = "./sqs-microservice"}
 prost = "0.4.0"
 prost-derive = "0.4"
 prost-types = "*"
 tokio-core = "0.1"
 #postgres = "0.15.2"
 base64 = "0.9.2"
-rusoto_core = "0.32.0"
+
 rusoto_s3 = "0.32.0"
+rusoto_core = "0.32.0"
+rusoto_sqs = "0.32.0"
 sha256 = "0.1.0"
 sha2 = "0.7.1"
 log = "*"
@@ -34,6 +35,9 @@ stopwatch = "0.0.7"
 lru_time_cache = "0.8.0"
 zstd = "0.4.21+zstd.1.3.7"
 futures = "0.1.25"
+sqs-lambda = "0.1.4"
+lambda_runtime = "0.1.0"
+aws_lambda_events = "0.2.0"
 
 [dependencies.uuid]
 version = "*"
