--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -6,7 +6,8 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
 graph-descriptions = { path = "./graph-descriptions/" }
-sqs-microservice = { path = "./sqs-microservice" }
+sqs-lambda = "0.1.*"
+#sqs-lambda = {path = "./sqs-lambda/"}
 serde_json = "*"
 serde = "1.0.71"
 serde_derive = "1.0.71"
@@ -22,6 +23,16 @@ chrono = "0.4.6"
 no-panic = "0.1.6"
 rayon = "1.0.3"
 stopwatch = "0.0.7"
+
+
+rusoto_s3 = "0.32.0"
+rusoto_core = "0.32.0"
+rusoto_sqs = "0.32.0"
+futures = "0.1.25"
+aws_lambda_events = "0.2.0"
+simple_logger = "1.0.1"
+lambda_runtime = "0.1.0"
+openssl-probe = "0.1.2"
 
 
 [dependencies.uuid]
