Integrate SqsLambda into core services

--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -14,3 +14,12 @@ log = "0.4.6"
 #dgraph_client = "*"
 dgraph-rs = "0.1.2"
 grpc = "0.6.1"
+sqs-lambda = "0.1.4"
+rusoto_core = "0.32.0"
+rusoto_s3 = "0.32.0"
+rusoto_sqs = "0.32.0"
+futures = "0.1.25"
+lambda_runtime = "0.1.0"
+aws_lambda_events = "0.2.0"
+openssl-probe = "0.1.2"
+simple_logger = "1.0.1"
