--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -15,8 +15,8 @@ failure = "0.1.2"
 prost = "0.4.0"
 log = "0.4.3"
 base16 = "0.1.1"
-regex = "1.0.5"
-lazy_static = "1.1.0"
+regex = "1.1.0"
+lazy_static = "1.2.0"
 brotli = "3.1.0"
 sysmon = "0.1.3"
 chrono = "0.4.6"
@@ -33,6 +33,8 @@ aws_lambda_events = "0.2.0"
 simple_logger = "1.0.1"
 lambda_runtime = "0.1.0"
 openssl-probe = "0.1.2"
+rusoto_mock = "0.30.0"
+rusoto_credential = "0.15.0"
 
 
 [dependencies.uuid]
