--- a/node-identity-mapper/Cargo.toml
+++ b/node-identity-mapper/Cargo.toml
@@ -6,7 +6,6 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 [dependencies]
 bytes = "0.4"
 failure = "*"
-sqs-microservice = {path = "./sqs-microservice"}
 graph-descriptions = {path = "./graph-descriptions"}
 prost = "0.4.0"
 prost-derive = "0.4"
@@ -24,6 +23,12 @@ serde = "1.0.80"
 serde_json = "1.0.32"
 serde_derive = "1.0.80"
 futures = "0.1.25"
+sqs-lambda = "*"
+openssl-probe = "0.1.2"
+stopwatch = "0.0.7"
+lambda_runtime = "0.1.0"
+aws_lambda_events = "0.2.1"
+simple_logger = "1.0.1"
 
 
 [dependencies.uuid]
