--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 
 [dependencies]
 graph-descriptions = { path = "./graph-descriptions/" }
-sqs-microservice = { path = "./sqs-microservice/" }
 failure = "0.1.3"
 serde = "1.0.80"
 serde_json = "1.0.33"
@@ -24,3 +23,9 @@ aws_lambda_events = "0.2.0"
 openssl-probe = "0.1.2"
 simple_logger = "1.0.1"
 stopwatch = "0.0.7"
+sha2 = "0.8.0"
+rusoto_sns = "0.32.0"
+zstd = "0.4.22+zstd.1.3.8"
+base16 = "0.1.1"
+prost = "0.4.0"
+base64 = "0.10.1"
