--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -33,16 +33,19 @@ log = "*"
 base58 = "0.1.0"
 stopwatch = "0.0.7"
 lru_time_cache = "0.8.0"
-zstd = "0.4.21+zstd.1.3.7"
+zstd = "0.4.22+zstd.1.3.8"
 futures = "0.1.25"
 sqs-lambda = "0.1.4"
 lambda_runtime = "0.1.0"
 aws_lambda_events = "0.2.0"
 openssl-probe = "0.1.2"
 simple_logger = "1.0.1"
+serde_json = "1.0.39"
+serde_derive = "1.0.89"
+serde = "1.0.89"
 
 [dependencies.uuid]
-version = "*"
+version = "0.6.*"
 features = ["v4"]
 
 [dependencies.mysql]
