--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -24,9 +24,9 @@ tokio-core = "0.1"
 #postgres = "0.15.2"
 base64 = "0.9.2"
 
-rusoto_s3 = "0.32.0"
-rusoto_core = "0.32.0"
-rusoto_sqs = "0.32.0"
+rusoto_s3 = "0.37.0"
+rusoto_core = "0.37.0"
+rusoto_sqs = "0.37.0"
 sha256 = "0.1.0"
 sha2 = "0.7.1"
 log = "*"
@@ -35,7 +35,7 @@ stopwatch = "0.0.7"
 lru_time_cache = "0.8.0"
 zstd = "0.4.22+zstd.1.3.8"
 futures = "0.1.25"
-sqs-lambda = "0.1.4"
+sqs-lambda = "0.3.0"
 lambda_runtime = "0.1.0"
 aws_lambda_events = "0.2.0"
 openssl-probe = "0.1.2"
@@ -43,6 +43,12 @@ simple_logger = "1.0.1"
 serde_json = "1.0.39"
 serde_derive = "1.0.89"
 serde = "1.0.89"
+hmap = "0.1.0"
+rusoto_dynamodb = "0.37.0"
+serde_dynamodb = "0.2.2"
+tokio = "0.1.18"
+quickcheck = "0.8.2"
+quickcheck_macros = "0.8.0"
 
 [dependencies.uuid]
 version = "0.6.*"
