--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -12,19 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^0.23.0",
-    "@aws-cdk/aws-lambda": "^0.23.0",
-    "@aws-cdk/aws-lambda-event-sources": "^0.23.0",
-    "@aws-cdk/aws-rds": "^0.23.0",
-    "@aws-cdk/aws-route53": "^0.23.0",
-    "@aws-cdk/aws-s3": "^0.23.0",
-    "@aws-cdk/aws-s3-notifications": "^0.23.0",
-    "@aws-cdk/aws-sns": "^0.23.0",
-    "@aws-cdk/aws-sqs": "^0.23.0",
-    "@aws-cdk/aws-ecs": "^0.23.0",
-    "@aws-cdk/cdk": "^0.23.0",
-    "@types/node": "^10.12.21",
-    "aws-cdk": "^0.23.0",
+    "@aws-cdk/aws-ec2": "^0.31.0",
+    "@aws-cdk/aws-cloudtrail": "^0.31.0",
+    "@aws-cdk/aws-ecs": "^0.31.0",
+    "@aws-cdk/aws-lambda": "^0.31.0",
+    "@aws-cdk/aws-lambda-event-sources": "^0.31.0",
+    "@aws-cdk/aws-rds": "^0.31.0",
+    "@aws-cdk/aws-route53": "^0.31.0",
+    "@aws-cdk/aws-s3": "^0.31.0",
+    "@aws-cdk/aws-s3-notifications": "^0.31.0",
+    "@aws-cdk/aws-servicediscovery": "^0.31.0",
+    "@aws-cdk/aws-sns": "^0.31.0",
+    "@aws-cdk/aws-sqs": "^0.31.0",
+    "@aws-cdk/cdk": "^0.31.0",
+    "@types/node": "^10.14.6",
+    "aws-cdk": "^0.31.0",
     "node-env-file": "^0.1.8"
   }
 }
