Update default dgraph cluster unit. Avoid redoing work by caching retries in node-identifier.

--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -13,10 +13,10 @@ log = "0.4.6"
 #dgraph_client = "*"
 dgraph-rs = "0.1.2"
 grpc = "0.6.1"
-sqs-lambda = "0.1.4"
-rusoto_core = "0.32.0"
-rusoto_s3 = "0.32.0"
-rusoto_sqs = "0.32.0"
+sqs-lambda = "0.3.0"
+rusoto_core = "0.37.0"
+rusoto_s3 = "0.37.0"
+rusoto_sqs = "0.37.0"
 futures = "0.1.25"
 lambda_runtime = "0.1.0"
 aws_lambda_events = "0.2.0"
@@ -24,9 +24,10 @@ openssl-probe = "0.1.2"
 simple_logger = "1.0.1"
 stopwatch = "0.0.7"
 sha2 = "0.8.0"
-rusoto_sns = "0.32.0"
+rusoto_sns = "0.37.0"
 zstd = "0.4.22+zstd.1.3.8"
 base16 = "0.1.1"
 prost = "0.4.0"
 base64 = "0.10.1"
 rand = "0.6.5"
+itertools = "0.8.0"
