Adopt new schema. New analyzer library. New engagement system.

--- a/analyzer_executor/Dockerfile
+++ b/analyzer_executor/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /lambda
 
 # Add the requiremts
 ADD requirements.txt /tmp
-RUN pip install --quiet -t /lambda -r /tmp/requirements.txt 
+RUN pip install --upgrade --quiet -t /lambda -r /tmp/requirements.txt 
 #&& \
 #    find /lambda -type d | xargs chmod ugo+rx && \
  #   find /lambda -type f | xargs chmod ugo+r
