--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -29,7 +29,6 @@
     "@aws-cdk/core": "^0.36.0",
     "@types/node": "^10.14.6",
     "aws-cdk": "^0.36.0",
-    "node-env-file": "^0.1.8",
-    "@aws-cdk/aws-cloudmap": "latest"
+    "node-env-file": "^0.1.8"
   }
 }
