--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
 graph-descriptions = { path = "./graph-descriptions/" }
+sqs-lambda = "0.1.*"
+
 serde_json = "*"
 serde = "1.0.71"
 serde_derive = "1.0.71"
@@ -13,19 +15,27 @@ failure = "0.1.2"
 prost = "0.4.0"
 log = "0.4.3"
 base16 = "0.1.1"
-regex = "1.0.5"
-lazy_static = "1.1.0"
+regex = "1.1.0"
+lazy_static = "1.2.0"
 brotli = "3.1.0"
-sqs-lambda = "0.1.4"
-lambda_runtime = "0.1.0"
 
-rusoto_s3 = "0.32.0"
-rusoto_core = "0.32.0"
-rusoto_sqs = "0.32.0"
+chrono = "0.4.6"
+no-panic = "0.1.6"
+rayon = "1.0.3"
+stopwatch = "0.0.7"
+
+
+rusoto_s3 = {version="0.36.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.36.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.36.0", default_features = false, features=["rustls"]}
 futures = "0.1.25"
 aws_lambda_events = "0.2.0"
 simple_logger = "1.0.1"
-openssl-probe = "0.1.2"
+lambda_runtime = "0.1.0"
+#openssl-probe = "0.1.2"
+
+rusoto_credential = "0.15.0"
+
 
 [dependencies.uuid]
 version = "*"
