--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -2,11 +2,12 @@
 name = "generic-subgraph-generator"
 version = "0.1.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
 graph-descriptions = { path = "./graph-descriptions/" }
-sqs-lambda = "0.1.*"
+sqs-lambda = "0.6.*"
 
 serde_json = "*"
 serde = "1.0.71"
@@ -25,16 +26,14 @@ rayon = "1.0.3"
 stopwatch = "0.0.7"
 
 
-rusoto_s3 = {version="0.36.0", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.36.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.36.0", default_features = false, features=["rustls"]}
+rusoto_s3 = {version="0.40.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.40.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.40.0", default_features = false, features=["rustls"]}
 futures = "0.1.25"
 aws_lambda_events = "0.2.0"
 simple_logger = "1.0.1"
 lambda_runtime = "0.1.0"
 #openssl-probe = "0.1.2"
-
-rusoto_credential = "0.15.0"
 
 
 [dependencies.uuid]
