--- a/node-identity-mapper/Cargo.toml
+++ b/node-identity-mapper/Cargo.toml
@@ -13,8 +13,10 @@ prost-types = "*"
 tokio-core = "0.1"
 postgres = "0.15.2"
 base64 = "0.9.2"
-rusoto_core = "0.32.0"
-rusoto_s3 = "0.32.0"
+
+rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
+
 sha256 = "0.1.0"
 sha2 = "0.7.1"
 log = "0.4.4"
@@ -23,7 +25,7 @@ serde = "1.0.80"
 serde_json = "1.0.32"
 serde_derive = "1.0.80"
 futures = "0.1.25"
-sqs-lambda = "*"
+sqs-lambda = "0.6.*"
 openssl-probe = "0.1.2"
 stopwatch = "0.0.7"
 lambda_runtime = "0.1.0"
@@ -34,8 +36,4 @@ simple_logger = "1.0.1"
 [dependencies.uuid]
 version = "*"
 features = ["v4"]
-
-
-[build-dependencies]
-tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
 
