--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
 graph-descriptions = { path = "./graph-descriptions/" }
-    sqs-lambda = "0.1.*"
+sqs-lambda = "0.6.*"
 #sqs-lambda = {path = "./sqs-lambda/"}
 serde_json = "*"
 serde = "1.0.71"
@@ -25,16 +25,16 @@ rayon = "1.0.3"
 stopwatch = "0.0.7"
 
 
-rusoto_s3 = "0.32.0"
-rusoto_core = "0.32.0"
-rusoto_sqs = "0.32.0"
+rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}
+#rusoto_mock = "0.30.0"
+
+
 futures = "0.1.25"
 aws_lambda_events = "0.2.0"
 simple_logger = "1.0.1"
 lambda_runtime = "0.1.0"
-openssl-probe = "0.1.2"
-rusoto_mock = "0.30.0"
-rusoto_credential = "0.15.0"
 
 
 [dependencies.uuid]
