--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-servicediscovery": "^1.2.0",
     "@aws-cdk/aws-sns": "^1.2.0",
     "@aws-cdk/aws-sqs": "^1.2.0",
+    "@aws-cdk/aws-acm": "^1.2.0",
     "@aws-cdk/aws-s3-deployment": "^1.2.0",
     "@aws-cdk/core": "^1.2.0",
     "@types/node": "^10.14.6",
