--- a/grapl-cdk/package.json
+++ b/grapl-cdk/package.json
@@ -12,26 +12,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.2.0",
-    "@aws-cdk/aws-cloudtrail": "^1.2.0",
-    "@aws-cdk/aws-ec2": "^1.2.0",
-    "@aws-cdk/aws-ecs": "^1.2.0",
-    "@aws-cdk/aws-elasticache": "^1.2.0",
-    "@aws-cdk/aws-lambda": "^1.2.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.2.0",
-    "@aws-cdk/aws-rds": "^1.2.0",
-    "@aws-cdk/aws-route53": "^1.2.0",
-    "@aws-cdk/aws-s3": "^1.2.0",
-    "@aws-cdk/aws-s3-notifications": "^1.2.0",
-    "@aws-cdk/aws-servicediscovery": "^1.2.0",
-    "@aws-cdk/aws-sns": "^1.2.0",
-    "@aws-cdk/aws-sqs": "^1.2.0",
-    "@aws-cdk/aws-acm": "^1.2.0",
-    "@aws-cdk/aws-s3-deployment": "^1.2.0",
-    "@aws-cdk/core": "^1.2.0",
+    "@aws-cdk/aws-apigateway": "^1.14.0",
+    "@aws-cdk/aws-cloudtrail": "^1.14.0",
+    "@aws-cdk/aws-ec2": "^1.14.0",
+    "@aws-cdk/aws-ecs": "^1.14.0",
+    "@aws-cdk/aws-elasticache": "^1.14.0",
+    "@aws-cdk/aws-lambda": "^1.14.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.14.0",
+    "@aws-cdk/aws-rds": "^1.14.0",
+    "@aws-cdk/aws-route53": "^1.14.0",
+    "@aws-cdk/aws-s3": "^1.14.0",
+    "@aws-cdk/aws-s3-deployment": "^1.14.0",
+    "@aws-cdk/aws-s3-notifications": "^1.14.0",
+    "@aws-cdk/aws-sagemaker": "^1.14.0",
+    "@aws-cdk/aws-servicediscovery": "^1.14.0",
+    "@aws-cdk/aws-sns": "^1.14.0",
+    "@aws-cdk/aws-sqs": "^1.14.0",
+    "@aws-cdk/core": "^1.14.0",
     "@types/node": "^10.14.6",
-    "aws-cdk": "^1.2.0",
+    "aws-cdk": "^1.14.0",
     "node-env-file": "^0.1.8",
-    "@aws-cdk/aws-sagemaker": "^1.2.0"
+    "uuid": "^3.3.3"
   }
 }
