Remove some redundant code.

--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
-graph-descriptions = { path = "./graph-descriptions/" }
+graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+
 sqs-lambda = "0.6.*"
 
 serde_json = "*"
