--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 
 [dependencies]
-graph-descriptions = { path = "./graph-descriptions/" }
+graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
 failure = "0.1.3"
 serde = "1.0.80"
 serde_json = "1.0.33"
