--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 
 [dependencies]
 graph-generator-lib = { path = "./graph-generator-lib/" }
-graph-descriptions = { path = "./graph-descriptions/" }
+graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
 sqs-lambda = "0.6.*"
 #sqs-lambda = {path = "./sqs-lambda/"}
 serde_json = "*"
