--- a/graph-descriptions/Cargo.toml
+++ b/graph-descriptions/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "graph-descriptions"
-version = "0.1.0"
+name = "grapl-graph-descriptions"
+version = "0.1.2"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
+description = "A library for interacting with Grapl graphs"
+license = "MIT"
 
 
 [dependencies]
