--- a/analyzer_executor/requirements.txt
+++ b/analyzer_executor/requirements.txt
@@ -1,5 +1,9 @@
-pydgraph==1.2.*
+pydgraph==2.0.*
 boto3
-grapl-analyzerlib==0.1.173
+grapl-analyzerlib==0.1.270
+grapl_os_user_analyzer_plugin
+grapl_ipc_analyzer_plugin==0.0.2
 redis
 grpcio
+protobuf
+typing_extensions
