--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -2,6 +2,7 @@
 name = "graph-merger"
 version = "0.1.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
@@ -10,14 +11,14 @@ serde = "1.0.80"
 serde_json = "1.0.33"
 serde_derive = "1.0.80"
 log = "0.4.6"
-#dgraph_client = "*"
-dgraph-rs = "0.1.2"
+
+dgraph-rs = "0.2.*"
 grpc = "0.6.1"
 sqs-lambda = "0.3.0"
 rusoto_core = "0.37.0"
 rusoto_s3 = "0.37.0"
 rusoto_sqs = "0.37.0"
-futures = "0.1.25"
+#futures = "0.1.25"
 lambda_runtime = "0.1.0"
 aws_lambda_events = "0.2.0"
 openssl-probe = "0.1.2"
@@ -31,3 +32,5 @@ prost = "0.4.0"
 base64 = "0.10.1"
 rand = "0.6.5"
 itertools = "0.8.0"
+async-std = "1.0.1"
+futures = "0.3.1"
