--- a/sysmon-subgraph-generator/graph-generator-lib/Cargo.toml
+++ b/sysmon-subgraph-generator/graph-generator-lib/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 
 [dependencies]
 
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+#graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
 
 failure = "0.1.2"
 
