--- a/analyzer-dispatcher/Cargo.toml
+++ b/analyzer-dispatcher/Cargo.toml
@@ -12,21 +12,32 @@ base64 = "0.10.1"
 base16 = "0.1.1"
 dgraph-rs = "0.1.2"
 failure = "0.1.5"
-futures = "0.1.25"
+futures = "0.3.*"
 grpc = "0.6.1"
 log = "0.4.6"
-openssl-probe = "0.1.2"
 prost = "0.4.0"
-rusoto_core = "0.32.0"
-rusoto_s3 = "0.32.0"
-rusoto_sns = "0.32.0"
-rusoto_sqs = "0.32.0"
+
+rusoto_s3 = {version="0.42.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.42.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.42.0", default_features = false, features=["rustls"]}
+rusoto_sns = {version="0.42.0", default_features = false, features=["rustls"]}
+
 serde = "1.0.85"
 serde_derive = "1.0.85"
 serde_json = "1.0.37"
 sha2 = "0.8.0"
 simple_logger = "1.0.1"
-sqs-lambda = "0.1.8"
 stopwatch = "0.0.7"
-lambda_runtime = "0.1.0"
-zstd = "0.4.22+zstd.1.3.8"
+
+
+lambda_runtime = "0.2.*"
+async-trait = "0.1.22"
+zstd = "0.5.1"
+tokio-compat = "0.1.2"
+tokio = "0.2.6"
+sqs-lambda = "0.20.0"
+
+
+[dependencies.uuid]
+version = "*"
+features = ["v4"]
