consolidate deps for cargo workspace, remove node-identity-mapper

--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -5,11 +5,8 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-generator-lib = { path = "./graph-generator-lib/" }
-#graph-generator-lib = { path = "../graph-generator-lib/" }
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
-
+graph-generator-lib = { path = "../graph-generator-lib/" }
+graph-descriptions = { package = "graph-descriptions", path = "../graph-descriptions"}
 
 sqs-lambda = "0.2.8"
 
