--- a/analyzer-dispatcher/Cargo.toml
+++ b/analyzer-dispatcher/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package = "graph-descriptions", path = "../graph-descriptions"}
 
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
