--- a/derive-dynamic-node/Cargo.toml
+++ b/derive-dynamic-node/Cargo.toml
@@ -22,7 +22,7 @@ serde_derive = "1.0.97"
 serde = "1.0.97"
 serde_json = "1.0.40"
 log = "0.4.7"
-grapl-graph-descriptions = "0.2.3"
+graph-descriptions = {package="graph-descriptions", path="../graph-descriptions"}
 
 
 [dependencies.uuid]
