--- a/graph-descriptions/Cargo.toml
+++ b/graph-descriptions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "grapl-graph-descriptions"
+name = "graph-descriptions"
 version = "0.2.5"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 description = "A library for interacting with Grapl graphs"
