--- a/graph-generator-lib/Cargo.toml
+++ b/graph-generator-lib/Cargo.toml
@@ -5,15 +5,14 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 
 [dependencies]
 
-#graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
+graph-descriptions = { package = "graph-descriptions", path = "../graph-descriptions" }
 
 failure = "0.1.2"
 
 sha2 = "0.7.1"
-rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}
+rusoto_core = {version = "0.42.0", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.42.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.42.0", default_features = false, features=["rustls"]}
 
 futures = "0.1.23"
 base64 = "0.9.2"
@@ -21,4 +20,4 @@ prost = "0.4.0"
 serde_json = "1.0.24"
 log = "0.4.3"
 base16 = "0.1.1"
-zstd = "0.4.21+zstd.1.3.7"
+zstd = "0.5.1+zstd.1.4.4"
