--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -5,8 +5,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {path="../graph-descriptions", package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="graph-descriptions", path = "../graph-descriptions"}
 failure = "0.1.3"
 serde = "1.0.80"
 serde_json = "1.0.33"
