--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   master_graph:
     tty: false
-    image: dgraph/standalone:1.2.2
+    image: dgraph/standalone:v1.2.2
     ports:
       - "8000:8000"
       - "8080:8080"
@@ -11,7 +11,7 @@ services:
 
   engagement_graph:
     tty: false
-    image: dgraph/standalone:1.2.2
+    image: dgraph/standalone:v1.2.2
     ports:
       - "8001:8000"
       - "8081:8080"
@@ -192,3 +192,12 @@ services:
     tty: false
     links:
       - engagement_graph:engagement_graph
+
+  grapl_engagement_view:
+    build:
+      context: ./engagement_ux/engagement_view/
+      dockerfile: ./Dockerfile
+    environment:
+      - PORT=1234
+    ports:
+      - 1234:1234
