--- a/graph-merger/Dockerfile
+++ b/graph-merger/Dockerfile
@@ -1,26 +1,8 @@
-FROM grapl/grapl_rust_base as builder
+FROM alpine
 
-# this should be passed in via Makefile using build-args
-ARG SERVICE_NAME=graph-merger
+ENV BUCKET_PREFIX=local-grapl
+ENV IS_LOCAL=true
 
-WORKDIR /tmp
-RUN mkdir ./artifacts
-RUN mkdir -p ./home/rust/.rustup/tmp/
+COPY ./graph-merger .
 
-COPY ./ ./${SERVICE_NAME}
-
-# if this chown is not present, will receive the below error.
-# this chown needs to be run AFTER the files are copied over
-# ```
-#     Updating crates.io index
-# error: failed to open: /tmp/target/release/.cargo-lock
-#
-# Caused by:
-#   Permission denied (os error 13)
-# ```
-RUN sudo chown -R rust:rust .
-RUN sudo chown -R rust:rust /home/rust/.rustup/
-
-RUN pwd
-RUN ls -lah
-RUN cargo build --release --manifest-path ./${SERVICE_NAME}/Cargo.toml
+CMD ./graph-merger
