--- a/node-identifier/Dockerfile
+++ b/node-identifier/Dockerfile
@@ -4,5 +4,4 @@ ENV BUCKET_PREFIX=local-grapl
 ENV IS_LOCAL=true
 
 COPY ./node-identifier .
-
-CMD ./node-identifier
+COPY ./node-identifier-retry-handler .
