--- a/engagement_ux/engagement_edge/Dockerfile
+++ b/engagement_ux/engagement_edge/Dockerfile
@@ -1,28 +1,41 @@
-FROM python:3.7
-RUN apt-get update && apt-get install -y zip
+FROM grapl/grapl-python-lambda-builder
 WORKDIR /lambda
 
-ADD requirements.txt /tmp
+COPY requirements.txt /tmp
 RUN pip install --quiet -t /lambda -r /tmp/requirements.txt
 
 
-ADD src/ /lambda/
+COPY src/ /lambda/
 RUN python -m compileall -q /lambda
 
 RUN zip --quiet -9r /lambda.zip .
 FROM scratch
-COPY --from=0 /lambda.zip /
 
-FROM python:3.7
-RUN apt-get update && apt-get install -y zip
+FROM grapl/grapl-python-lambda-builder
 
 ADD requirements.txt /tmp
 RUN pip install -r /tmp/requirements.txt
-RUN pip install chalice
 
 RUN chalice new-project app/
 WORKDIR /app
-VOLUME /app
 
 ADD src/engagement_edge.py /app/app.py
+
+COPY --from=0 /lambda.zip /
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
