--- a/analyzer_executor/Dockerfile
+++ b/analyzer_executor/Dockerfile
@@ -1,12 +1,38 @@
-FROM python:3.7
-RUN apt-get update && apt-get install -y zip
+FROM grapl/grapl-python-lambda-builder
 WORKDIR /lambda
 
-ADD requirements.txt /tmp
+COPY requirements.txt /tmp
 RUN pip install --quiet -t /lambda -r /tmp/requirements.txt
 
 
-ADD src/ /src/
+COPY src/ /lambda/
 RUN python -m compileall -q /lambda
 
+RUN zip --quiet -9r /lambda.zip .
+FROM scratch
+
+FROM grapl/grapl-python-lambda-builder
+
+ADD requirements.txt /tmp
 RUN pip install -r /tmp/requirements.txt
+
+WORKDIR /app
+
+COPY --from=0 /lambda.zip /
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
