--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -43,7 +43,7 @@ stopwatch = "0.0.7"
 
 zstd = "0.5.*"
 futures = "0.3.*"
-sqs-lambda = "0.20.5"
+sqs-lambda = "0.20.*"
 #sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
 
 aws_lambda_events = "0.2.0"
