--- a/engagement_ux/engagement_view/package.json
+++ b/engagement_ux/engagement_view/package.json
@@ -18,6 +18,7 @@
     "d3": "^5.15.1",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
+    "minimist": "^1.2.3",
     "prettier": "2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
