--- a/engagement_ux/engagement_view/package.json
+++ b/engagement_ux/engagement_view/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sidebar": "^3.0.0",
     "d3": "^5.15.1",
+    "debug": "^2.6.9",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
     "minimist": "^1.2.3",
