--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Build image
         run: |
           cd ./sysmon-subgraph-generator/
+          ./build.sh
           docker build . -t grapl/grapl-sysmon-subgraph-generator
 
       - name: Log into registry
