--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Build image
         run: |
           cd ./sysmon-subgraph-generator/
-          ./build.sh
+          docker run   -v "$(pwd)":/home/rust/src -t grapl/grapl_rust_base cargo build --release 
+          cp "./target/x86_64-unknown-linux-musl/release/sysmon-subgraph-generator" "./sysmon-subgraph-generator"
           docker build . -t grapl/grapl-sysmon-subgraph-generator
 
       - name: Log into registry
