--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -33,7 +33,7 @@ jobs:
           cd ./sysmon-subgraph-generator/
           mkdir -p .//target/release
           chmod -R 777 ./target/release/
-          docker run   -v "$(pwd)":/home/rust/src -t grapl/grapl_rust_base sudo cargo build --release 
+          docker run   -v "$(pwd)":/home/rust/src -t grapl/grapl_rust_base cargo build --release 
           cp "./target/x86_64-unknown-linux-musl/release/sysmon-subgraph-generator" "./sysmon-subgraph-generator"
           docker build . -t grapl/grapl-sysmon-subgraph-generator
 
