--- a/.github/workflows/docker-graph-merger.yaml
+++ b/.github/workflows/docker-graph-merger.yaml
@@ -13,7 +13,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: sysmon-subgraph-generator
+  IMAGE_NAME: graph-merger
 
 jobs:
   push:
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build $IMAGE_NAME
+      - name: Build graph-merger
         run: |
           cd ./$IMAGE_NAME/
           mkdir -p ./target/x86_64-unknown-linux-musl/release
@@ -35,7 +35,7 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
 
-      - name: Push $IMAGE_NAME
+      - name: Push graph-merger
 
         run: |
           # Strip git ref prefix from version
