--- a/.github/workflows/docker-engagement-view.yaml
+++ b/.github/workflows/docker-engagement-view.yaml
@@ -13,7 +13,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: analyzer-dispatcher
+  IMAGE_NAME: engagement-view
 
 jobs:
   push:
@@ -23,19 +23,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build analyzer-dispatcher
+      - name: Build engagement-view
         run: |
-          cd ./$IMAGE_NAME/
-          mkdir -p ./target/x86_64-unknown-linux-musl/release
-          chmod -R 777 ./target
-          docker run   -v "$(pwd)":/home/rust/src -t grapl/grapl_rust_base cargo build --release
-          cp "./target/x86_64-unknown-linux-musl/release/$IMAGE_NAME" "./$IMAGE_NAME"
+          cd ./engagement_ux/engagement_view/
+          yarn build
+
           docker build . -t grapl/grapl-$IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
 
-      - name: Push analyzer-dispatcher
+      - name: Push engagement-view
 
         run: |
           # Strip git ref prefix from version
