Install yarn in action

--- a/.github/workflows/docker-engagement-view.yaml
+++ b/.github/workflows/docker-engagement-view.yaml
@@ -1,4 +1,4 @@
-name: Docker Graph Merger
+name: Docker Engagement View
 
 on:
   push:
@@ -22,6 +22,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - name: Build engagement-view
         run: |
