--- a/.github/workflows/docker-engagement-view.yaml
+++ b/.github/workflows/docker-engagement-view.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Build engagement-view
         run: |
           cd ./engagement_ux/engagement_view/
+          yarn install
           yarn build
 
           docker build . -t grapl/grapl-$IMAGE_NAME
