--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,7 +204,7 @@ services:
       - amazonaws:127.0.0.1
       - minio:127.0.0.1
 
-  grapl_engagement_edge:
+  grapl-engagement-edge:
     build:
       context: ./engagement_ux/engagement_edge/
       dockerfile: ./Dockerfile
@@ -217,7 +217,27 @@ services:
     links:
       - engagement_graph:engagement_graph
 
-  grapl_engagement_view:
+  grapl-model-plugin-deployer:
+    build:
+      context: ./grapl-model-plugin-deployer/
+      dockerfile: ./Dockerfile
+    ports:
+      - "8123:8123"
+    environment:
+      - IS_LOCAL="True"
+    command: chalice local --no-autoreload --host=0.0.0.0 --port=8123
+    tty: true
+    links:
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+      - engagement_graph:engagement_graph
+      - master_graph:master_graph
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
+
+  grapl-engagement-view:
     image: grapl/grapl-engagement-view
 #    build:
 #      context: ./engagement_ux/engagement_view/
@@ -234,3 +254,43 @@ services:
       - master_graph:master_graph
     ports:
       - 8888:8888
+
+
+## Plugins
+
+  grapl-aws-guardduty-subgraph-generator:
+    image: grapl/grapl-aws-guardduty-subgraph-generator
+    tty: false
+    environment:
+      - BUCKET_PREFIX="local-grapl"
+      - IS_LOCAL="True"
+    links:
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
+    depends_on:
+      - s3
+      - sqs
+      - graph_provision
+
+
+  grapl-aws-guardduty-provision:
+    build:
+      context: ./engagement_ux/engagement_edge/
+      dockerfile: ./Dockerfile
+    volumes:
+      - ../grapl-aws-plugins/local_plugin/local_provision.py:/var/run/target/local_provision.py
+    command: python /var/run/target/local_provision.py
+    tty: true
+    links:
+      - engagement_graph
+      - master_graph
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
