--- a/graph-generator-lib/Cargo.toml
+++ b/graph-generator-lib/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "graph-generator-lib"
-version = "0.1.0"
+version = "0.1.4"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
+description = "Helper library for implementing Grapl Graph Generators"
+license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
 
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions" , version="0.2.*"}
 #graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
 
 failure = "0.1.2"
