--- a/analyzer-dispatcher/Cargo.toml
+++ b/analyzer-dispatcher/Cargo.toml
@@ -28,7 +28,7 @@ serde = "1.0.85"
 serde_derive = "1.0.85"
 serde_json = "1.0.37"
 sha2 = "0.8.0"
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 stopwatch = "0.0.7"
 
 
