--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-generator-lib = { path = "./graph-generator-lib/" }
-#graph-generator-lib = { path = "../graph-generator-lib/" }
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+#graph-generator-lib = { path = "./graph-generator-lib/" }
+graph-generator-lib = { path = "../graph-generator-lib/" }
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
 #graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
 
 
 #sqs-lambda = "0.2.8"
-sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
+sqs-lambda = {path="../../../workspace/sqs-lambda/", version="*"}
 
 serde_json = "*"
 serde = "1.0.71"
@@ -36,7 +36,7 @@ rusoto_core = {version="0.42.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.42.0", default_features = false, features=["rustls"]}
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.5.1"
