--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -5,8 +5,7 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {path="../graph-descriptions", package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
 failure = "0.1.3"
 serde = "1.0.80"
 serde_json = "1.0.33"
@@ -16,18 +15,16 @@ log = "0.4.6"
 dgraph-rs = "0.2.*"
 grpc = "0.6.1"
 sqs-lambda = "0.20.*"
-#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
 
 rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
 rusoto_sns = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
 
-#futures = "0.1.25"
 lambda_runtime = "0.2.*"
 aws_lambda_events = "0.2.0"
 
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 stopwatch = "0.0.7"
 sha2 = "0.8.0"
 
