--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -17,12 +17,10 @@ path = "src/bin/node-identifier-retry-handler.rs"
 [dependencies]
 bytes = "0.4"
 failure = "*"
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {path="../graph-descriptions", package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
 prost = "0.4.0"
 prost-derive = "0.4"
 prost-types = "*"
-#tokio-core = "0.1"
 
 base64 = "0.9.2"
 
@@ -34,7 +32,6 @@ serde_dynamodb = {version="0.5.0-beta.1", default_features = false, features=["r
 
 lambda_runtime = "0.2.*"
 
-
 sha256 = "0.1.0"
 sha2 = "0.7.1"
 log = "*"
@@ -44,11 +41,10 @@ stopwatch = "0.0.7"
 zstd = "0.5.*"
 futures = "0.3.*"
 sqs-lambda = "0.20.*"
-#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
 
 aws_lambda_events = "0.2.0"
 
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 serde_json = "1.0.39"
 serde_derive = "1.0.89"
 serde = "1.0.89"
