--- a/generic-subgraph-generator/Cargo.toml
+++ b/generic-subgraph-generator/Cargo.toml
@@ -5,14 +5,11 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-#graph-generator-lib = { path = "./graph-generator-lib/" }
 graph-generator-lib = { path = "../graph-generator-lib/" }
 graph-descriptions = {package="grapl-graph-descriptions", version="*"}
-#graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
+grapl-config = {path = "../grapl-config"}
 
-
-#sqs-lambda = "0.2.8"
-sqs-lambda = {path="../../../workspace/sqs-lambda/", version="*"}
+sqs-lambda = "0.20.*"
 
 serde_json = "*"
 serde = "1.0.71"
@@ -31,9 +28,10 @@ rayon = "1.0.3"
 stopwatch = "0.0.7"
 
 
-rusoto_s3 = {version="0.42.0", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.42.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.42.0", default_features = false, features=["rustls"]}
+rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
 simple_logger = "1.6.*"
