--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions", version="*"}
+grapl-config = {path = "../grapl-config"}
 failure = "0.1.3"
 serde = "1.0.80"
 serde_json = "1.0.33"
